--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
@@ -18,12 +18,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false,
+      "bundleIdentifier": "keita0724-memoapp",
+      "buildNumber": "1.0.0"
     },
     "android": {
+      "package": "keita0724-memoapp",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "foregroundImage": "./assets/adaptiveicon1.png",
+        "backgroundImage": "./assets/adaptiveicon2.png"
       }
     },
     "web": {
